force-app/main/default/objects/Training_Plan__c/Training_Plan__c.object-meta.xml
<CustomObject>
    <label>Training Plan</label>
    <nameField>
        <label>Training Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>