force-app/main/default/objects/Training_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the training plan</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Plans</relationshipLabel>
    <relationshipName>Training_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>