force-app/main/default/objects/Training_Plan__c/fields/Duration_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Duration_Weeks__c</fullName>
    <description>Number of weeks in training plan</description>
    <label>Duration (Weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>