force-app/main/default/objects/Training_Plan__c/fields/Goal_Race_Pace__c.field-meta.xml
<CustomField>
    <fullName>Goal_Race_Pace__c</fullName>
    <label>Goal Race Pace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>