force-app/main/default/objects/Training_Plan__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <description>Last time plan was modified</description>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>