force-app/main/default/objects/Training_Plan__c/fields/Mileage_Level__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Level__c</fullName>
    <description>Weekly mileage training level</description>
    <label>Mileage Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Low (10-30 mi/wk)</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Medium (30-60 mi/wk)</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>High (60-90+ mi/wk)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>