force-app/main/default/objects/Training_Plan__c/fields/Peak_Weekly_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Peak_Weekly_Mileage__c</fullName>
    <label>Peak Weekly Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>