force-app/main/default/objects/Training_Plan__c/fields/Plan_JSON__c.field-meta.xml
<CustomField>
    <fullName>Plan_JSON__c</fullName>
    <description>Complete training plan as JSON</description>
    <label>Plan JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>