force-app/main/default/objects/Training_Plan__c/fields/Race_Distance__c.field-meta.xml
<CustomField>
    <fullName>Race_Distance__c</fullName>
    <description>Target race distance</description>
    <label>Race Distance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5K</fullName>
            </value>
            <value>
                <fullName>10K</fullName>
            </value>
            <value>
                <fullName>Half Marathon</fullName>
            </value>
            <value>
                <fullName>Marathon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>