force-app/main/default/objects/Training_Plan__c/fields/Strava_Synced__c.field-meta.xml
<CustomField>
    <fullName>Strava_Synced__c</fullName>
    <description>Last time plan was synced with Strava</description>
    <label>Strava Synced</label>
    <type>DateTime</type>
</CustomField>