force-app/main/default/objects/Training_Plan__c/fields/Training_Block__c.field-meta.xml
<CustomField>
    <fullName>Training_Block__c</fullName>
    <label>Training Block</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>